botao troca tela

--- a/views/nav.htm
+++ b/views/nav.htm
@@ -26,8 +26,8 @@
         </li>
 
         <li>
-          <a class="waves-effect" href="#!"><i class="material-icons">cloud</i>
-            Primeiro elemento
+          <a id="botaoLogicaDeCalculo" class="waves-effect" href="#"><i class="material-icons">functions</i>
+            Lógica de cálculo
           </a>
         </li>
         <li>
