agora os botões do nav funcionam

--- a/views/nav.htm
+++ b/views/nav.htm
@@ -26,7 +26,12 @@
         </li>
 
         <li>
-          <a id="botaoLogicaDeCalculo" class="waves-effect" href="#"><i class="material-icons">functions</i>
+          <a id="botaoHome" class="waves-effect" ><i class="material-icons">home</i>
+            Início
+          </a>
+        </li>
+        <li>
+          <a id="botaoLogicaDeCalculo" class="waves-effect" ><i class="material-icons">functions</i>
             Lógica de cálculo
           </a>
         </li>
