--- a/views/telaDeLogica.htm
+++ b/views/telaDeLogica.htm
@@ -14,14 +14,6 @@
   </div>
 </div>
 
-<!--TEMPO-->
-<div class="row">
-  <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
-    <label class="" for="tempo">Tempo de Impressão (h)</label>
-  </div>
-</div>
-
 <!--Consumo-->
 <div class="row">
   <div class="input-field col s12">
@@ -50,7 +42,7 @@
 <div class="row">
   <div class="input-field col s12">
     <input id="tempo" type="number" class="validate">
-    <label class="" for="tempo">Margem de Erro Tempo (h)</label>
+    <label class="" for="tempo">Margem de Erro Tempo (%)</label>
   </div>
 </div>
 
@@ -58,7 +50,7 @@
 <div class="row">
   <div class="input-field col s12">
     <input id="tempo" type="number" class="validate">
-    <label class="" for="tempo">Margem de Erro Peso (g)</label>
+    <label class="" for="tempo">Margem de Erro Peso (%)</label>
   </div>
 </div>
 
