--- a/app_calc_3d/www/views/telaDeLogica.htm
+++ b/app_calc_3d/www/views/telaDeLogica.htm
@@ -1,7 +1,7 @@
 <!--Preço do Filamento-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Preço do Filamento (R$/kg)</label>
   </div>
 </div>
@@ -9,7 +9,7 @@
 <!--Peso-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Peso da peça (g)</label>
   </div>
 </div>
@@ -17,7 +17,7 @@
 <!--Consumo-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Consumo da sua impressora (kWh)</label>
   </div>
 </div>
@@ -25,7 +25,7 @@
 <!--Taxa de Energia-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Taxa de Energia (R$/kWh)</label>
   </div>
 </div>
@@ -33,7 +33,7 @@
 <!--Lucro-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Lucro da Impressão (%)</label>
   </div>
 </div>
@@ -41,7 +41,7 @@
 <!--Margem de Erro Tempo-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Margem de Erro Tempo (%)</label>
   </div>
 </div>
@@ -49,7 +49,7 @@
 <!--Margem de Erro Peso-->
 <div class="row">
   <div class="input-field col s12">
-    <input id="tempo" type="number" class="validate">
+    <input id="tempo" type="number" class="">
     <label class="" for="tempo">Margem de Erro Peso (%)</label>
   </div>
 </div>
