agora conecta com o db mas so no android em

--- a/app_calc_3d/platforms/android/app/src/main/assets/www/views/telaPrincipal.htm
+++ b/app_calc_3d/platforms/android/app/src/main/assets/www/views/telaPrincipal.htm
@@ -21,7 +21,8 @@
   <!--BOTÃO-->
   <!--<a id="botao" class="waves-effect waves-light btn" onclick="calculo()">Calcular</a>-->
   <button data-target="modal1" class="btn modal-trigger" onclick="calculo()">CALCULAR</button>
-
+  <button id="btnIniciadb"class="btn ">iniciadb</button>
+  <button class="btn ">Mostra db</button>
 </div>
 
 </form>
@@ -44,4 +45,6 @@
 
 
 </div>
+
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/SQLLite.js"></script>
