--- a/app_calc_3d/platforms/android/app/src/main/res/xml/config.xml
+++ b/app_calc_3d/platforms/android/app/src/main/res/xml/config.xml
@@ -4,6 +4,9 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="SQLitePlugin">
+        <param name="android-package" value="com.nolanlawson.cordova.sqlite.SQLitePlugin" />
+    </feature>
     <name>calc_3d</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
@@ -19,6 +22,7 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
+    <edit-config file="app/src/main/AndroidManifest.xml" mode="merge" target="/manifest/application" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
 </widget>
